2007-03-29  DJ Delorie  <dj@redhat.com>

	* config/tc-m32c.c (rl_for, relaxable): Protect argument.
	(md_relax_table): Add entries for ADJNZ macros.
	(M32C_Macros): Add ADJNZ macros.
	(subtype_mappings): Add entries for ADJNZ macros.
	(insn_to_subtype): Check for adjnz and sbjnz insns.
	(md_estimate_size_before_relax): Pass insn to insn_to_subtype.
	(md_convert_frag): Convert adjnz and sbjnz.

2007-03-29  Nick Clifton  <nickc@redhat.com>

	* itbl-ops.c (itbl_entry): Remove unnecessary and excessively long
	initialization.
	* itbl-ops.h (enum e_processor): Initialise the e_nprocs field
	using ITBL_NUMBER_OF_PROCESSORS.
	* itbl-parse.y (yyerror): Remove use of redundant macro PARAMS.

2007-03-28  H.J. Lu  <hongjiu.lu@intel.com>

	* config/tc-i386.c (build_modrm_byte): For instructions with 2
	register operands, encode destination in i.rm.regmem if its
	RegMem bit is set.

2007-03-28  Richard Sandiford  <richard@codesourcery.com>
	    Phil Edwards  <phil@codesourcery.com>

	* doc/as.texinfo: Put the contents after the title page rather
	than at the end of the document.

2007-03-27  Alan Modra  <amodra@bigpond.net.au>

	* NEWS: Mention ".reloc".

2007-03-26  Sterling Augustine  <sterling@tensilica.com>
	
	* config/tc-xtensa.c (xg_translate_idioms): Allow assembly idioms
	in FLIX instructions.
	
2007-03-26  Julian Brown  <julian@codesourcery.com>

	* config/tc-arm.c (arm_it): Add immisfloat field.
	(parse_qfloat_immediate): Disallow integer syntax for floating-point
	immediates. Fix hex immediates, handle 0.0 and -0.0 specially.
	(parse_neon_mov): Set immisfloat bit for operand if it parsed as a
	float.
	(neon_cmode_for_move_imm): Reject non-float immediates for float
	operands.
	(neon_move_immediate): Pass immisfloat bit to neon_cmode_for_move_imm.

2007-03-26  Julian Brown  <julian@codesourcery.com>

	* doc/c-arm.texi: Add documentation for .dn/.qn directives.

2007-03-26  Alan Modra  <amodra@bigpond.net.au>

	* doc/as.texinfo (Reloc): Document.