@@ -1,3 +1,9 @@
+2007-03-30  Paul Brook  <paul@codesourcery.com>
+
+	* config/tc-arm.c (encode_thumb2_ldmstm): New function.
+	(do_t_ldmstm): Generate 16-bit push/pop.  Use encode_thumb2_ldmstm.
+	(do_t_push_pop):  Use encode_thumb2_ldmstm.
+
 2007-03-29  DJ Delorie  <dj@redhat.com>
 
 	* config/tc-m32c.c (rl_for, relaxable): Protect argument.
